frontend: fix course row grid spacing

--- a/frontend/src/components/course-search/CourseRow.module.css
+++ b/frontend/src/components/course-search/CourseRow.module.css
@@ -44,7 +44,7 @@
 
     display: grid;
     align-items: center;
-    grid-template-columns: auto 1fr 1fr;
+    grid-template-columns: auto 1fr auto;
 
     & .summary {
         display: grid;
